--- a/index.html
+++ b/index.html
@@ -257,22 +257,30 @@ footer p{
   <div class="container">
     <h2 class="section-title">İletişim</h2>
     <p class="section-desc">
-      Projeleriniz ve iş birlikleri için bizimle iletişime geçebilirsiniz.
+      Projeleriniz, iş birlikleri ve teklif talepleriniz için bizimle
+      doğrudan iletişime geçebilirsiniz.
     </p>
 
     <div class="grid">
-      <div class="card">
-        <h3>Telefon</h3>
-        <p>05XX XXX XX XX</p>
-      </div>
-      <div class="card">
-        <h3>WhatsApp</h3>
-        <p>05XX XXX XX XX</p>
-      </div>
-      <div class="card">
-        <h3>Instagram</h3>
+      <a href="tel:+905XXXXXXXXX" class="card" style="text-decoration:none;color:inherit">
+        <h3>📞 Telefon</h3>
+        <p>+90 5XX XXX XX XX</p>
+      </a>
+
+      <a href="https://wa.me/905XXXXXXXXX" target="_blank" class="card" style="text-decoration:none;color:inherit">
+        <h3>💬 WhatsApp</h3>
+        <p>Anında mesaj gönder</p>
+      </a>
+
+      <a href="mailto:info@ranteknoloji.com" class="card" style="text-decoration:none;color:inherit">
+        <h3>✉️ E-posta</h3>
+        <p>info@ranteknoloji.com</p>
+      </a>
+
+      <a href="https://instagram.com/ranteknoloji" target="_blank" class="card" style="text-decoration:none;color:inherit">
+        <h3>📸 Instagram</h3>
         <p>@ranteknoloji</p>
-      </div>
+      </a>
     </div>
   </div>
 </section>
