--- a/index.html
+++ b/index.html
@@ -348,6 +348,37 @@ footer p{
     </iframe>
   </div>
 </section>
+<section class="alt">
+  <div class="container">
+    <h2 class="section-title">İletişim</h2>
+    <p class="section-desc">
+      Projeleriniz, iş birlikleri ve teklif talepleriniz için bizimle
+      doğrudan iletişime geçebilirsiniz.
+    </p>
+
+    <div class="grid">
+      <a href="tel:+905439594404" class="card" style="text-decoration:none;color:inherit">
+        <h3>📞 Telefon</h3>
+        <p>+90 543 959 44 04</p>
+      </a>
+
+      <a href="https://wa.me/905439594404" target="_blank" class="card" style="text-decoration:none;color:inherit">
+        <h3>💬 WhatsApp</h3>
+        <p>Anında mesaj gönder</p>
+      </a>
+
+      <a href="mailto:info@ranteknoloji.com" class="card" style="text-decoration:none;color:inherit">
+        <h3>✉️ E-posta</h3>
+        <p>info@ranteknoloji.com</p>
+      </a>
+
+      <a href="https://instagram.com/ranteknoloji" target="_blank" class="card" style="text-decoration:none;color:inherit">
+        <h3>📸 Instagram</h3>
+        <p>@ranteknoloji</p>
+      </a>
+    </div>
+  </div>
+</section>
 
 <footer>
   <a href="#anasayfa">Ana Sayfa</a>
