--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ footer p{
     </iframe>
   </div>
 </section>
-<section class="alt">
+<section class="alt" id="iletisim-detay">
   <div class="container">
     <h2 class="section-title">İletişim</h2>
     <p class="section-desc">
